Fix header title positioning on mobile screens.

--- a/sources/stylesheets/_general.scss
+++ b/sources/stylesheets/_general.scss
@@ -116,6 +116,10 @@ body {
     position: static;
     padding: 40px 20px;
     @include bg($white, 1);
+
+    @include query($tablet-2) {
+      padding-top: 1px;
+    }
   }
 }
 
