--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -86,6 +86,12 @@ body.dark-background {
   padding: 40px 20px;
   background-color: white;
 }
+@media screen and (max-width: 752px) {
+  .container .background-image, .container
+  .background-color {
+    padding-top: 1px;
+  }
+}
 
 .background-image {
   top: 0;
